[gd_scene load_steps=4 format=3 uid="uid://cbdv8cp4ed1u8"]

[ext_resource type="Script" path="res://Scripts/base_card.gd" id="1_l75a1"]

[sub_resource type="CanvasTexture" id="CanvasTexture_8lqjg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gk1my"]
size = Vector2(87, 131)

[node name="card" type="Node2D"]
script = ExtResource("1_l75a1")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 100.0
offset_bottom = 143.0
texture = SubResource("CanvasTexture_8lqjg")

[node name="Area2D" type="Area2D" parent="TextureRect"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TextureRect/Area2D"]
position = Vector2(49.5, 70.5)
shape = SubResource("RectangleShape2D_gk1my")

[connection signal="gui_input" from="TextureRect" to="." method="_on_texture_rect_gui_input"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
[connection signal="input_event" from="TextureRect/Area2D" to="." method="_on_area_2d_input_event"]
